force-app/main/default/objects/Crypto_Hub__c/Crypto_Hub__c.object-meta.xml
<CustomObject>
    <label>Crypto Hub</label>
    <nameField>
        <label>Crypto Hub Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crypto Hubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>