force-app/main/default/objects/Crypto_Hub__c/fields/Approx_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Approx_EndDate__c</fullName>
    <label>Approx End Date</label>
    <type>Date</type>
</CustomField>