force-app/main/default/objects/Crypto_Hub__c/fields/Approx_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Approx_StartDate__c</fullName>
    <label>Approx Start Date</label>
    <type>Date</type>
</CustomField>