force-app/main/default/objects/Crypto_Hub__c/fields/ApproxEnd_Date__c.field-meta.xml
<CustomField>
    <fullName>ApproxEnd_Date__c</fullName>
    <label>Approx End Date</label>
    <type>Date</type>
</CustomField>