force-app/main/default/objects/Crypto_Hub__c/fields/ApproxStart_Date__c.field-meta.xml
<CustomField>
    <fullName>ApproxStart_Date__c</fullName>
    <label>Approx Start Date</label>
    <type>Date</type>
</CustomField>