force-app/main/default/objects/Crypto_Hub__c/fields/City_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Area_Name__c</fullName>
    <label>City/Area Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>