force-app/main/default/objects/Crypto_Hub__c/fields/City_Hub_Description__c.field-meta.xml
<CustomField>
    <fullName>City_Hub_Description__c</fullName>
    <label>City Hub Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>