force-app/main/default/objects/Crypto_Hub__c/fields/CryptoHubCity__c.field-meta.xml
<CustomField>
    <fullName>CryptoHubCity__c</fullName>
    <label>Crypto Hub City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>