force-app/main/default/objects/Crypto_Hub__c/fields/CryptoHubCountry__c.field-meta.xml
<CustomField>
    <fullName>CryptoHubCountry__c</fullName>
    <label>Crypto Hub Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>