force-app/main/default/objects/Crypto_Hub__c/fields/CryptoHubStateProvince__c.field-meta.xml
<CustomField>
    <fullName>CryptoHubStateProvince__c</fullName>
    <label>Crypto Hub State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>