force-app/main/default/objects/Crypto_Hub__c/fields/MSAPopulation__c.field-meta.xml
<CustomField>
    <fullName>MSAPopulation__c</fullName>
    <label>MSA Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>