force-app/main/default/objects/Crypto_Hub__c/fields/Name_3_Major_Conference__c.field-meta.xml
<CustomField>
    <fullName>Name_3_Major_Conference__c</fullName>
    <label>Name 3 [Major Conference]</label>
    <length>100</length>
    <type>Text</type>
</CustomField>