force-app/main/default/objects/Crypto_Hub__c/fields/No_of_Annual_Major_Conferences__c.field-meta.xml
<CustomField>
    <fullName>No_of_Annual_Major_Conferences__c</fullName>
    <label>No. of Annual Major Conferences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>