force-app/main/default/objects/Crypto_Hub__c/fields/No_of_Universities_Teaching_BlockChain__c.field-meta.xml
<CustomField>
    <fullName>No_of_Universities_Teaching_BlockChain__c</fullName>
    <label>No. of Universities Teaching BlockChain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>