force-app/main/default/objects/Crypto_Hub__c/fields/No_of_Web_3_Clubs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Web_3_Clubs__c</fullName>
    <label>No. of Web 3 Clubs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>