force-app/main/default/objects/Crypto_Hub__c/fields/NoofUniversities__c.field-meta.xml
<CustomField>
    <fullName>NoofUniversities__c</fullName>
    <label>No. of Universities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>