force-app/main/default/objects/Crypto_Hub__c/fields/Regulatory_Actions__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Actions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulatory Actions</label>
    <referenceTo>Regulatory_Actions__c</referenceTo>
    <relationshipLabel>Crypto Hubs</relationshipLabel>
    <relationshipName>Crypto_Hubs</relationshipName>
    <type>Lookup</type>
</CustomField>