force-app/main/default/objects/Crypto_Hub__c/fields/Web_3_Co_s_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_3_Co_s_Description__c</fullName>
    <label>Web 3 Co&apos;s Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>